mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.12) stable; urgency=low

 * repair center batchgui on screen
 * osregex: another empty string regex test
 * license functions: opsiserviceuser if possible
 * linux: shellBatch implemented as shellInAnIcon

-- d.oertel <d.oertel@uib.de> Wed, 16 Dec 2020 15:00

opsi-winst/opsi-script (4.12.4.11) stable; urgency=low

 * files: copy: deny-list with '.DS_Store'
 * files: on 'permission denied' call handle.exe if existing in opsi-script directory
 * dosInAnIcon: if win7 and no new Arguments then call runAndCaptureOut

-- d.oertel <d.oertel@uib.de> Mon, 14 Dec 2020 15:00

opsi-winst/opsi-script (4.12.4.10) experimental; urgency=low

 * macos: modify locale path for opsi-script-gui.app
 * macos / linux: oscheck_gui_startable: kill opsi-laz-gui-test if not terminated
 * osregex: filter empty input to avoid execeptions
 * macos: shellBatch implemented as shellInAnIcon
 * osnetworkcalculator: net gethostbyname(<ip>)
 * osparser: GetIpByName: use new gethostbyname

-- d.oertel <d.oertel@uib.de> Thu, 26 Nov 2020 15:00


opsi-winst/opsi-script (4.12.4.9) experimental; urgency=low

* GetSectionFromIniFile: remove encoding transformation (windows only)

-- j.werner <j.werner@uib.de> Wed, 25 Nov 2020 17:39


opsi-winst/opsi-script (4.12.4.8) experimental; urgency=low

* isRegexMatch: checks if string is NOT empty before exec is executed
		catchs exceptions

-- j.werner <j.werner@uib.de> Tue, 24 Nov 2020 14:55


MISSING CHANGELOGS:

opsi-winst/opsi-script (4.12.4.7)



opsi-winst/opsi-script (4.12.4.6) experimental; urgency=low

 * import osprocesses
 * call of opsi-laz-gui-test in extra log: ogdatei.StandardMainLogPath+'opsi-script-gui-test.log'

-- d.oertel <d.oertel@uib.de> Wed, 04 Nov 2020 15:00

opsi-winst/opsi-script (4.12.4.5) experimental; urgency=low

 * the one and only project file is now opsi-script.lpi